--- a/Hafleti/app/src/main/AndroidManifest.xml
+++ b/Hafleti/app/src/main/AndroidManifest.xml
@@ -3,18 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data android:scheme="https" />
         </intent>
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data android:scheme="geo" />
         </intent>
         <!-- Explicitly allow querying for Google Maps -->
         <package android:name="com.google.android.apps.maps" />
     </queries>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -26,6 +30,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".BilletActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SeatSelectionActivity"
+            android:exported="false" />
         <activity
             android:name=".SearchActivity"
             android:exported="false" />
