--- a/mobile/src/main/resources/application.properties
+++ b/mobile/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=mobile
 spring.datasource.url=jdbc:mysql://localhost:3306/mobile
 spring.datasource.username=root
 spring.datasource.password=azazaz1A2025
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
