--- a/Hafleti/app/build.gradle
+++ b/Hafleti/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0' // Nécessaire pour Glide
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
